@@ -14,18 +14,19 @@ import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.atLeastOnce;
 import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.doThrow;
+import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 import com.google.gson.Gson;
 import jakarta.ws.rs.BadRequestException;
+import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import org.broadinstitute.consent.http.AbstractTestHelper;
 import org.broadinstitute.consent.http.db.DACAutomationRuleDAO;
@@ -36,8 +37,9 @@ import org.broadinstitute.consent.http.db.ElectionDAO;
 import org.broadinstitute.consent.http.db.UserDAO;
 import org.broadinstitute.consent.http.enumeration.ElectionType;
 import org.broadinstitute.consent.http.enumeration.UserRoles;
-import org.broadinstitute.consent.http.models.AuthUser;
 import org.broadinstitute.consent.http.models.Dac;
+import org.broadinstitute.consent.http.models.DacDatasetExternalizationRequest;
+import org.broadinstitute.consent.http.models.DacDatasetExternalizationResponse;
 import org.broadinstitute.consent.http.models.DataAccessAgreement;
 import org.broadinstitute.consent.http.models.DataAccessRequest;
 import org.broadinstitute.consent.http.models.DataAccessRequestData;
@@ -71,6 +73,8 @@ class DacServiceTest extends AbstractTestHelper {
 
   @Mock private VoteService voteService;
 
+  @Mock private ElasticSearchService elasticSearchService;
+
   @Mock private DaaService daaService;
 
   @Mock private DacServiceDAO dacServiceDAO;
@@ -86,6 +90,7 @@ class DacServiceTest extends AbstractTestHelper {
             electionDAO,
             dataAccessRequestDAO,
             voteService,
+            elasticSearchService,
             daaService,
             dacServiceDAO,
             ruleDAO);
@@ -135,7 +140,7 @@ class DacServiceTest extends AbstractTestHelper {
   @Test
   void testFindById() {
     int dacId = 1;
-    when(dacDAO.findById(dacId)).thenReturn(getDacs().get(0));
+    when(dacDAO.findById(dacId)).thenReturn(getDacs().getFirst());
     when(dacDAO.findMembersByDacIdAndRoleId(dacId, UserRoles.CHAIRPERSON.getRoleId()))
         .thenReturn(Collections.singletonList(getDacUsers().get(0)));
     when(dacDAO.findMembersByDacIdAndRoleId(dacId, UserRoles.MEMBER.getRoleId()))
@@ -153,21 +158,22 @@ class DacServiceTest extends AbstractTestHelper {
 
   @Test
   void testCreateDac() {
-    when(dacDAO.createDac(anyString(), anyString(), any())).thenReturn(getDacs().get(0).getDacId());
+    when(dacDAO.createDac(anyString(), anyString(), any()))
+        .thenReturn(getDacs().getFirst().getDacId());
     initService();
 
-    Integer dacId = service.createDac("name", "description");
-    assertEquals(getDacs().get(0).getDacId(), dacId);
+    Integer dacId = service.createDac("name", "description", 1);
+    assertEquals(getDacs().getFirst().getDacId(), dacId);
   }
 
   @Test
   void testCreateDacWithEmail() {
     when(dacDAO.createDac(anyString(), anyString(), anyString(), any()))
-        .thenReturn(getDacs().get(0).getDacId());
+        .thenReturn(getDacs().getFirst().getDacId());
     initService();
 
-    Integer dacId = service.createDac("name", "description", "email@test.com");
-    assertEquals(getDacs().get(0).getDacId(), dacId);
+    Integer dacId = service.createDac("name", "description", "email@test.com", 1);
+    assertEquals(getDacs().getFirst().getDacId(), dacId);
   }
 
   @Test
@@ -176,8 +182,8 @@ class DacServiceTest extends AbstractTestHelper {
     initService();
 
     try {
-      service.updateDac("name", "description", 1);
-    } catch (Exception e) {
+      service.updateDac("name", "description", 1, 1);
+    } catch (Exception _) {
       fail("Update should not fail");
     }
   }
@@ -188,8 +194,8 @@ class DacServiceTest extends AbstractTestHelper {
     initService();
 
     try {
-      service.updateDac("name", "description", "test@email.com", 1);
-    } catch (Exception e) {
+      service.updateDac("name", "description", "test@email.com", 1, 1);
+    } catch (Exception _) {
       fail("Update should not fail");
     }
   }
@@ -246,8 +252,8 @@ class DacServiceTest extends AbstractTestHelper {
   @Test
   void testFindMembersByDacId() {
     when(dacDAO.findMembersByDacId(anyInt()))
-        .thenReturn(Collections.singletonList(getDacUsers().get(0)));
-    when(dacDAO.findUserRolesForUsers(any())).thenReturn(getDacUsers().get(0).getRoles());
+        .thenReturn(Collections.singletonList(getDacUsers().getFirst()));
+    when(dacDAO.findUserRolesForUsers(any())).thenReturn(getDacUsers().getFirst().getRoles());
     initService();
 
     List<User> users = service.findMembersByDacId(1);
@@ -258,8 +264,8 @@ class DacServiceTest extends AbstractTestHelper {
   @Test
   void testAddDacMember() {
     Gson gson = new Gson();
-    User user = getDacUsers().get(0);
-    Dac dac = getDacs().get(0);
+    User user = getDacUsers().getFirst();
+    Dac dac = getDacs().getFirst();
     when(userDAO.findUserById(any())).thenReturn(user);
     when(userDAO.findUserById(any())).thenReturn(user);
     List<Election> elections =
@@ -271,16 +277,16 @@ class DacServiceTest extends AbstractTestHelper {
                   newE.setReferenceId(UUID.randomUUID().toString());
                   return newE;
                 })
-            .collect(Collectors.toList());
+            .toList();
     DataAccessRequest dar = new DataAccessRequest();
     dar.setData(new DataAccessRequestData());
     when(dataAccessRequestDAO.findByReferenceId(any())).thenReturn(dar);
     when(electionDAO.findOpenElectionsByDacId(any())).thenReturn(elections);
-    doNothing().when(dacDAO).addDacMember(anyInt(), anyInt(), anyInt());
+    doNothing().when(dacDAO).addDacMember(anyInt(), anyInt(), anyInt(), anyInt());
     initService();
 
     Role role = new Role(UserRoles.CHAIRPERSON.getRoleId(), UserRoles.CHAIRPERSON.getRoleName());
-    User user1 = service.addDacMember(role, user, dac);
+    User user1 = service.addDacMember(role, user, dac, 1);
     assertNotNull(user1);
     assertFalse(user1.getRoles().isEmpty());
     verify(voteService, times(elections.size()))
@@ -290,42 +296,42 @@ class DacServiceTest extends AbstractTestHelper {
   @Test
   void testRemoveDacMember() {
     Role role = new Role(UserRoles.MEMBER.getRoleId(), UserRoles.MEMBER.getRoleName());
-    Dac dac = getDacs().get(0);
+    Dac dac = getDacs().getFirst();
     User member = getDacUsers().get(1);
     dac.setChairpersons(Collections.singletonList(getDacUsers().get(0)));
     dac.setMembers(Collections.singletonList(member));
-    doNothing().when(dacDAO).removeDacMember(anyInt());
+    doNothing().when(dacDAO).removeDacMember(anyInt(), anyInt());
     doNothing().when(voteService).deleteOpenDacVotesForUser(any(), any());
     initService();
 
     try {
       service.removeDacMember(role, member, dac, 1);
-    } catch (Exception e) {
+    } catch (Exception _) {
       fail();
     }
-    verify(dacDAO, atLeastOnce()).removeDacMember(anyInt());
+    verify(dacDAO, atLeastOnce()).removeDacMember(anyInt(), anyInt());
     verify(voteService, atLeastOnce()).deleteOpenDacVotesForUser(any(), any());
   }
 
   @Test
   void testRemoveDacChair() {
     Role role = new Role(UserRoles.CHAIRPERSON.getRoleId(), UserRoles.CHAIRPERSON.getRoleName());
-    Dac dac = getDacs().get(0);
-    User chair1 = getDacUsers().get(0);
+    Dac dac = getDacs().getFirst();
+    User chair1 = getDacUsers().getFirst();
     User chair2 = getDacUsers().get(0);
     dac.setChairpersons(Arrays.asList(chair1, chair2));
     dac.setMembers(Collections.singletonList(getDacUsers().get(1)));
-    doNothing().when(dacDAO).removeDacMember(anyInt());
+    doNothing().when(dacDAO).removeDacMember(anyInt(), anyInt());
     doNothing().when(voteService).deleteOpenDacVotesForUser(any(), any());
     when(ruleDAO.auditedDeleteDACRuleSettingByUser(anyInt(), anyInt(), anyInt())).thenReturn(1);
     initService();
 
     try {
       service.removeDacMember(role, chair1, dac, 1);
-    } catch (Exception e) {
+    } catch (Exception _) {
       fail();
     }
-    verify(dacDAO, atLeastOnce()).removeDacMember(anyInt());
+    verify(dacDAO, atLeastOnce()).removeDacMember(anyInt(), anyInt());
     verify(voteService, atLeastOnce()).deleteOpenDacVotesForUser(any(), any());
     verify(ruleDAO, atLeastOnce()).auditedDeleteDACRuleSettingByUser(anyInt(), anyInt(), anyInt());
   }
@@ -333,7 +339,7 @@ class DacServiceTest extends AbstractTestHelper {
   @Test
   void testRemoveDacChairFailure() {
     Role role = new Role(UserRoles.CHAIRPERSON.getRoleId(), UserRoles.CHAIRPERSON.getRoleName());
-    Dac dac = getDacs().get(0);
+    Dac dac = getDacs().getFirst();
     User chair = getDacUsers().get(0);
     dac.setChairpersons(Collections.singletonList(chair));
     dac.setMembers(Collections.singletonList(getDacUsers().get(1)));
@@ -343,7 +349,7 @@ class DacServiceTest extends AbstractTestHelper {
         BadRequestException.class,
         () -> {
           service.removeDacMember(role, chair, dac, 1);
-          verify(dacDAO, times(0)).removeDacMember(anyInt());
+          verify(dacDAO, times(0)).removeDacMember(anyInt(), anyInt());
           verify(voteService, times(0)).deleteOpenDacVotesForUser(any(), any());
           verify(ruleDAO, times(0)).auditedDeleteDACRuleSettingByUser(anyInt(), anyInt(), anyInt());
         });
@@ -368,9 +374,9 @@ class DacServiceTest extends AbstractTestHelper {
   @Test
   void testFilterDataAccessRequestsByDAC_memberCase_1() {
     // Member has access to DataSet 1
-    List<Dataset> memberDataSets = Collections.singletonList(getDatasets().get(0));
+    List<Dataset> memberDataSets = Collections.singletonList(getDatasets().getFirst());
     when(dataSetDAO.findDatasetIdsByDACUserId(getMember().getUserId()))
-        .thenReturn(List.of(memberDataSets.get(0).getDatasetId()));
+        .thenReturn(List.of(memberDataSets.getFirst().getDatasetId()));
 
     initService();
 
@@ -385,9 +391,9 @@ class DacServiceTest extends AbstractTestHelper {
   @Test
   void testFilterDataAccessRequestsByDAC_memberCase_2() {
     // Member has access to datasets
-    List<Dataset> memberDataSets = Collections.singletonList(getDatasets().get(0));
+    List<Dataset> memberDataSets = Collections.singletonList(getDatasets().getFirst());
     when(dataSetDAO.findDatasetIdsByDACUserId(getMember().getUserId()))
-        .thenReturn(List.of(memberDataSets.get(0).getDatasetId()));
+        .thenReturn(List.of(memberDataSets.getFirst().getDatasetId()));
 
     initService();
 
@@ -402,7 +408,6 @@ class DacServiceTest extends AbstractTestHelper {
   @Test
   void testFilterDataAccessRequestsByDAC_memberCase_3() {
     // Member no direct access to datasets
-    List<Dataset> memberDataSets = Collections.emptyList();
     when(dataSetDAO.findDatasetIdsByDACUserId(getMember().getUserId())).thenReturn(List.of());
 
     initService();
@@ -412,7 +417,7 @@ class DacServiceTest extends AbstractTestHelper {
     List<DataAccessRequest> filtered = service.filterDataAccessRequestsByDac(dars, getMember());
 
     // Filtered documents should contain the ones the user has direct access to
-    assertEquals(memberDataSets.size(), filtered.size());
+    assertEquals(0, filtered.size());
   }
 
   @Test
@@ -435,11 +440,57 @@ class DacServiceTest extends AbstractTestHelper {
     assertEquals(dacsForUser.size(), dacs.size());
   }
 
-  /* Helper functions */
+  @Test
+  void testConvertDacDatasetsToExternal() throws Exception {
+    Dac dac = new Dac();
+    dac.setDacId(1);
+    when(dacDAO.findById(1)).thenReturn(dac);
+    when(dacDAO.findMembersByDacIdAndRoleId(anyInt(), anyInt())).thenReturn(List.of());
+    DacDatasetExternalizationRequest request =
+        new DacDatasetExternalizationRequest("policy update", false, true, true, null);
+    DacDatasetExternalizationResponse expected =
+        new DacDatasetExternalizationResponse(
+            1, false, "policy update", Instant.now(), Instant.now(), 2, 1, 1, 3, 0, 2);
+    when(dacServiceDAO.findConvertibleDatasetIds(anyInt(), any())).thenReturn(List.of(101, 102));
+    when(dacServiceDAO.convertDacDatasetsToExternal(anyInt(), anyInt(), any()))
+        .thenReturn(expected);
+    initService();
 
-  private AuthUser getUser() {
-    return new AuthUser("User");
+    DacDatasetExternalizationResponse actual = service.convertDacDatasetsToExternal(1, 10, request);
+    assertEquals(expected, actual);
+    verify(elasticSearchService).indexDatasets(List.of(101, 102));
   }
+
+  @Test
+  void testConvertDacDatasetsToExternalDryRunSkipsReindex() throws Exception {
+    Dac dac = new Dac();
+    dac.setDacId(1);
+    when(dacDAO.findById(1)).thenReturn(dac);
+    when(dacDAO.findMembersByDacIdAndRoleId(anyInt(), anyInt())).thenReturn(List.of());
+    DacDatasetExternalizationRequest request =
+        new DacDatasetExternalizationRequest("policy update", true, true, true, null);
+    when(dacServiceDAO.findConvertibleDatasetIds(anyInt(), any())).thenReturn(List.of(101, 102));
+    when(dacServiceDAO.convertDacDatasetsToExternal(anyInt(), anyInt(), any()))
+        .thenReturn(
+            new DacDatasetExternalizationResponse(
+                1, true, "policy update", Instant.now(), Instant.now(), 2, 1, 1, 3, 0, 2));
+    initService();
+
+    service.convertDacDatasetsToExternal(1, 10, request);
+
+    verify(elasticSearchService, never()).indexDatasets(any());
+  }
+
+  @Test
+  void testConvertDacDatasetsToExternalRequiresRevocation() {
+    initService();
+    DacDatasetExternalizationRequest request =
+        new DacDatasetExternalizationRequest("policy update", false, false, true, null);
+    assertThrows(
+        IllegalArgumentException.class, () -> service.convertDacDatasetsToExternal(1, 10, request));
+  }
+
+  /* Helper functions */
 
   /**
    * @return A list of 5 elections with DataSet ids
@@ -452,7 +503,7 @@ class DacServiceTest extends AbstractTestHelper {
               election.setDatasetId(i);
               return election;
             })
-        .collect(Collectors.toList());
+        .toList();
   }
 
   /**
@@ -472,7 +523,7 @@ class DacServiceTest extends AbstractTestHelper {
               dar.setData(data);
               return dar;
             })
-        .collect(Collectors.toList());
+        .toList();
   }
 
   /**
@@ -486,7 +537,7 @@ class DacServiceTest extends AbstractTestHelper {
               dataSet.setDatasetId(i);
               return dataSet;
             })
-        .collect(Collectors.toList());
+        .toList();
   }
 
   /**
@@ -505,7 +556,7 @@ class DacServiceTest extends AbstractTestHelper {
               dac.setAssociatedDaa(daa);
               return dac;
             })
-        .collect(Collectors.toList());
+        .toList();
   }
 
   /**
